# stellalpha

./: .dockerignore  .env.example  .gitignore  APIFY_INTEGRATION_SUMMARY.md  APIFY_TRENDING_TOKENS.md  Anchor.toml  COINGECKO_INTEGRATION.md  DEX_CONFIGURATION_GUIDE.md  Dockerfile.yellowstone  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  test-helius.ts  test-solana.ts  tsconfig.json  vercel.json  vitest.config.ts
.playwright-mcp/: page-2026-05-11T04-04-40-485Z.yml  page-2026-05-11T04-31-41-996Z.yml
anchor/: Anchor.toml
app/: globals.css  layout.tsx  page.tsx
carbon-parser/: .gitignore  Cargo.toml  README.md
carbon-parser/src/: carbon_decoders.rs  carbon_registry.rs  constants.rs  domain.rs  envelope.rs  fixtures.rs  lib.rs  main.rs  parser.rs  replay.rs  serialized.rs  stream.rs
components/: InfiniteScrollSentinel.tsx  PageLoader.tsx  ShadowModeToggle.tsx  SkeletonRow.tsx  StellalphaLoader.tsx  TraderCard.tsx  TrendingTokens.tsx  WalletConnectButton.tsx  auth-required.tsx  chat-agent-wrapper.tsx  chat-agent.tsx  header-switcher.tsx  modern-header.tsx  particles-background.tsx  sidebar.tsx  toast-demo.tsx  toast.tsx  wallet-header.tsx
contexts/: AgentContext.tsx  WalletContext.tsx  auth-context.tsx  onboarding-context.tsx
hooks/: use-infinite-scroll.ts  use-mobile.ts  useStellAlpha.ts
lib/: appkit-config.ts  banner.ts  coingecko-api.ts  copy-position-lifecycle.ts  demo-trade-stats.ts  demo-vault-pricing.ts  helius-api.ts  jupiter-tokens.ts  operator-auth.ts  server-admin.ts  session.ts  solana.ts  star-trader-stats.ts  stellalpha.ts  supabase-fetch.ts  supabase.ts  theme.ts  trade-parser.ts
migrations/: add_demo_trade_stats_function.sql  add_safe_boost_columns.sql  add_star_trader_stats_function.sql
scripts/: mockSwap.ts  simulate_frontend_pda.ts  simulate_frontend_tx.ts
store/: network.ts
tests/: cleanup-trades-route.test.ts  demo-trade-stats.test.ts  demo-vault-egress-routes.test.ts  demo-vault-read-auth.test.ts  demo-vault-valuation-routes.test.ts  follower-execution.test.ts  live-pilot-signature-confirmation.test.ts  orchestrator-rollback.test.ts  phase2b_lifecycle.ts  phase3-staleness.test.ts  phase3_execute_trader_swap.ts  phase5_settlement_and_withdraw.ts  phase6_migration_cleanup.ts  phase7_multi_asset.ts  reconcile-route.test.ts  star-trader-summary-route.test.ts  star-traders-route.test.ts  trade-parser.test.ts  verify-phase3b.test.ts  (+2 more)
(+241 files in other folders)
